uncomment button padding styles for ion-footer to ensure proper spacing

--- a/style.scss
+++ b/style.scss
@@ -479,8 +479,8 @@ ion-footer {
             }
 
             .button-solid {
-                // --padding-start: 10px !important;
-                // --padding-end: 10px !important;
+                --padding-start: 10px !important;
+                --padding-end: 10px !important;
                 // --padding-top: 10px !important;
                 // --padding-bottom: 10px !important;
             }
